[tool.poetry]
name = "statistics_python"
version = "0.1.0"
description = ""
authors = ["venguru <kin.sh0717@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.6"
numpy = "^1.19.1"
pandas = "^1.1.1"
scipy = "^1.5.2"
matplotlib = "^3.3.1"
seaborn = "^0.10.1"
jupyter-lsp = "^0.9.1"
statsmodels = "^0.12.0"
sklearn = "^0.0"
python-language-server = {extras = ["all"], version = "^0.34.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
